Fixed badges overflow on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -44,12 +44,7 @@ main {
 }
 
 
-.badges {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1.25rem;
-}
+
 .badges img {
     margin: 0 10px;
 }
@@ -128,14 +123,6 @@ h3 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-footer {
-    background-color: var(--secondary-color);
-    color: var(--tertiary-color);
-    width: 100%;
-    padding: 1rem 0;
-    text-align: center;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3); /* Adjusted for better visibility */
-}
 
 
 main, .container {
@@ -145,7 +132,7 @@ main, .container {
     border-radius: 8px;
     text-align: left;
     width: 100%;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     max-width: calc(min(90%, 800px));
     color: var(--quaternary-color); /* Using gray for text to reduce harshness */
 overflow-x: hidden;
@@ -171,10 +158,12 @@ main {
 }
 .badges {
     text-align: center;
-    margin: 20px 0;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 .badges img {
-    margin: 0 10px;
+    margin: 0 0.3em;
 }
 .section {
     background: #fff;
@@ -269,9 +258,12 @@ footer {
     background-color: var(--primary-color);
     color: var(--tertiary-color);
     width: 100%;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
     text-align: center;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3); /* Adjusted for better visibility */
+    display: flex;
+    justify-content: center;
+
 }
 footer a {
     color: var(--tertiary-color);
